cambio de imagen cards

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="container__info">
                 <div class="info--link">
-                    <img src="imagen/Conjunto/ConjuntoTopper.webp" class="imagenCatalogo" />
+                    <img src="imagen/ropa deportiva/sujetadordeportivo.jpg" class="imagenCatalogo" />
                     <h3>Ofertas</h3>
                     <p>Mira las ultimas ofertas y descuentos.</p>
                     <span class="span">
