se modifico parrafo cards 2

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="info--link">
                     <img src="imagen/ropa deportiva/sujetadordeportivo.jpg" class="imagenCatalogo" />
                     <h3>Ofertas</h3>
-                    <p>Mira todas las ofertas y descuentos.</p>
+                    <p>Mira todas nuestras ofertas y descuentos.</p>
                     <span class="span">
                         <a href="ofertas.html">
                             <p>CONOCER MAS</p>
