--- a/conjuntos.html
+++ b/conjuntos.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
   <title>Conjuntos</title>
   <link rel="icon" href="imagen/lenna1.ico" />
@@ -18,11 +20,11 @@
 </head>
 
 <body>
-  <header>
+  <header class="barra">
     <nav>
       <input type="checkbox" id="check">
       <label for="check" class="checkbtn">
-        <img src="imagen/menu-regular-24.png" alt="Logo Menu">
+        <img src="imagen/interface-button_icon.png" alt="Logo Menu">
       </label>
       <a href="index.html" class="enlace"><img src="imagen/lenna2.png" title="Inicio" alt="Logo Lenna" class="logo"></a>
       <ul>
@@ -34,93 +36,91 @@
     </nav>
   </header>
 
-  <main class="populares">
-    <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s">CONJUNTOS</h1>
-    <div class="grid">
-      <div>
-        <img src="imagen/Conjunto/camperashortcort.webp" class="imagenCatalogo">
-        <h2>Campera y Short Corto</h2>
-          <select name="Talle">
-            <option value="L">Large</option>
-            <option value="M">Medium</option>
-            <option value="S">Small</option>
-          </select>
-          <select name="Cantidad">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="6">5</option>
-            <option value="7">7</option>
-            <input type="button" value="Comprar" class="boton"/>
-          </select>
-      </div>
-      <div>
-        <img src="imagen/Conjunto/buzoyjogging.webp" class="imagenCatalogo">
-        <h2>Buzo y Jogging</h2>
-          <select name="Talle" id="">
-            <option value="L">Large</option>
-            <option value="M">Medium</option>
-            <option value="S">Small</option>
-          </select>
-          <select name="Cantidad">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="6">5</option>
-            <option value="7">7</option>
-            <input type="button" value="Comprar" class="boton"/>
-          </select>
-      </div>
-      <div>
-        <img src="imagen/Conjunto/shortcortoremera.webp" class="imagenCatalogo">
-        <h2>Remera y Short Corto</h2>
-          <select name="Talle" id="">
-            <option value="L">Large</option>
-            <option value="M">Medium</option>
-            <option value="S">Small</option>
-          </select>
-          <select name="Cantidad">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="6">5</option>
-            <option value="7">7</option>
-            <input type="button" value="Comprar" class="boton"/>
-          </select>
-      </div>
-      <div>
-        <img src="imagen/Conjunto/remerashortgym.webp" class="imagenCatalogo">
-        <h2>Remera y Short Corto Gym</h2>
-          <select name="Talle" id="">
-            <option value="L">Large</option>
-            <option value="M">Medium</option>
-            <option value="S">Small</option>
-          </select>
-          <select name="Cantidad">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="6">5</option>
-            <option value="7">7</option>
-            <input type="button" value="Comprar" class="boton"/>
-          </select>
+  <main class="articulo">
+    <div class="conte">
+      <div class="row">
+        <div class="cata">
+          <img src="imagen/Conjunto/buzoyjogging.webp" class="img-general">
+          <h2>Buzo y Jogging</h2>
+          <p>Buzo de hombre Grayson</p>
+          <p>$1.XXX,XX</p>
+          <a href="#" class="btn">Comprar</a>
+        </div>
+        <div class="cata">
+          <img src="imagen/Conjunto/camperashortcort.webp" class="img-general">
+          <h2>Campera y Short</h2>
+          <p>Campera de micro polar</p>
+          <p>$1.XXX,XX </p>
+          <a href="#" class="btn">Comprar</a>
+        </div>
+        <div class="cata">
+          <img src="imagen/Conjunto/shortcortoremera.webp" class="img-general">
+          <h2>Remera y Short</h2>
+          <p>sdghgjjjjjjjjjjj</p>
+          <p>$1.XXX,XX </p>
+          <a href="#" class="btn">Comprar</a>
+        </div>
+        <div class="cata">
+          <img src="imagen/Conjunto/remerashortgym.webp" class="img-general">
+          <h2>Remera y Short</h2>
+          <p>fghjkkkkkkkkkk</p>
+          <p>$1.XXX,XX</p>
+          <a href="#" class="btn">Comprar</a>
+        </div>
       </div>
     </div>
   </Main>
 
-  <footer class="footer">
-    <div>
-        <a href="#"><img src="imagen/contacto.png" title="Contacto" class="footer__logos"></a>
-        <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp2.png" class="footer__logos"></a>
-        <a href="https://instagram.com" target="blank"><img src="imagen/Instagram.png" class="footer__logos"></a>
-        <a href="https://facebook.com" target="blank"><img src="imagen/Facebook.png" class="footer__logos"></a>
+  <section class="pag">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </section>
+  <footer class="pie-pagina">
+    <div class="grupo">
+      <div class="box1">
+        <figure>
+          <a href="#"><img src="imagen/lenna1.jpg" alt="Logo LENNA"></a>
+        </figure>
+      </div>
+      <div class="box2">
+        <h2>SOBRE NOSOTROS</h2>
+        <P>Nuestro compromiso es ofrecer una gran variedad de prendas con una excelente relación
+          diseño-precio-calidad.</P>
+        <p>También podes seguirnos en redes sociales para que podamos estar conectados y nos sigamos conociendo.
+        </p>
+      </div>
+      <div class="box2">
+        <h2>SEGUINOS</h2>
+        <div class="red-sociales">
+          <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
+          <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
+          <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+        </div>
+      </div>
     </div>
-    <p class="footer--copy"> &copy; 2021 LENNA</p>
-</footer>
+    <div class="copy">
+      <p>&copy; 2021 <b>LENNA</b> - todos los derechos reservados</p>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
