--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    
+
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
@@ -20,13 +26,14 @@
 </head>
 
 <body>
-    <header>
+    <header class="barra">
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <img src="imagen/menu-regular-24.png" alt="Logo Menu">
+                <img src="imagen/interface-button_icon.png" alt="Logo Menu">
             </label>
-            <a href="index.html" class="enlace"><img src="imagen/lenna2.png" title="Inicio" alt="Logo Lenna"class="logo"></a>
+            <a href="index.html" class="enlace"><img src="imagen/lenna2.png" title="Inicio" alt="Logo Lenna"
+                    class="logo"></a>
             <ul>
                 <li><a href="abrigo.html">Abrigos</a></li>
                 <li><a href="ropa-deportiva.html">Ropa Deportiva</a></li>
@@ -84,7 +91,7 @@
         </section>
 
         <section class="nosotros">
-            <h2>Mas Sobre Nosotros</h2>
+            <h2>NUESTROS SERVICIOS</h2>
             <div class="iconos">
                 <div>
                     <a href="#"><img src="imagen/free-icon.jpg" title="Envios" alt="envios"></a>
@@ -94,10 +101,12 @@
                     </p>
                 </div>
                 <div>
-                    <a href="#"><img src="imagen/devoluciones.jpg" title="Cambios y Devoluciones" alt="devoluciones"></a>
+                    <a href="#"><img src="imagen/devoluciones.jpg" title="Cambios y Devoluciones"
+                            alt="devoluciones"></a>
                     <h3>Cambios y Devoluciones</h3>
                     <p>
-                        ¿No te gustó o no te quedó lo que pediste? Puedes cambiarlo o devolverlo de forma rápida y sencilla.
+                        ¿No te gustó o no te quedó lo que pediste? Puedes cambiarlo o devolverlo de forma rápida y
+                        sencilla.
                     </p>
                 </div>
                 <div>
@@ -113,7 +122,7 @@
         <section class="container">
             <div class="container__info">
                 <div class="info--link">
-                    <img src="imagen/Conjunto/set.jpg" class="imagenCatalogo" />
+                    <img src="imagen/Conjunto/set.jpg" class="img-general" />
                     <h3>Populares</h3>
                     <p>Lo mas elegido de nuestros clientes LENNA.</p>
                     <span class="span">
@@ -125,7 +134,7 @@
             </div>
             <div class="container__info">
                 <div class="info--link">
-                    <img src="imagen/Conjunto/remerashortgym.webp" class="imagenCatalogo" />
+                    <img src="imagen/Conjunto/remerashortgym.webp" class="img-general" />
                     <h3>Conjunto Training </h3>
                     <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
                     <span class="span">
@@ -137,7 +146,7 @@
             </div>
             <div class="container__info">
                 <div class="info--link">
-                    <img src="imagen/ropa deportiva/sujetadordeportivo.jpg" class="imagenCatalogo" />
+                    <img src="imagen/ropa deportiva/MUJER/sujetadordeportivo.jpg" class="img-general" />
                     <h3>Ofertas</h3>
                     <p>Mira todas nuestras ofertas y descuentos.</p>
                     <span class="span">
@@ -150,14 +159,32 @@
         </section>
     </main>
 
-    <footer class="footer">
-        <div>
-            <a href="#"><img src="imagen/contacto.png" title="Contacto" class="footer__logos"></a>
-            <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp2.png" class="footer__logos"></a>
-            <a href="https://instagram.com" target="blank"><img src="imagen/Instagram.png" class="footer__logos"></a>
-            <a href="https://facebook.com" target="blank"><img src="imagen/Facebook.png" class="footer__logos"></a>
+    <footer class="pie-pagina">
+        <div class="grupo">
+            <div class="box1">
+                <figure>
+                    <a href="#"><img src="imagen/lenna1.jpg" alt="Logo LENNA"></a>
+                </figure>
+            </div>
+            <div class="box2">
+                <h2>SOBRE NOSOTROS</h2>
+                <P>Nuestro compromiso es ofrecer una gran variedad de prendas con una excelente relación
+                    diseño-precio-calidad.</P>
+                <p>También podes seguirnos en redes sociales para que podamos estar conectados y nos sigamos conociendo.
+                </p>
+            </div>
+            <div class="box2">
+                <h2>SEGUINOS</h2>
+                <div class="red-sociales">
+                    <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
+                    <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
+                    <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+                </div>
+            </div>
         </div>
-        <p class="footer--copy"> &copy; 2021 LENNA</p>
+        <div class="copy">
+            <p>&copy; 2021 <b>LENNA</b> - todos los derechos reservados</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
