--- a/ofertas.html
+++ b/ofertas.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
     <title>Ofertas</title>
     <link rel="icon" href="imagen/lenna1.ico" />
@@ -18,11 +20,11 @@
 </head>
 
 <body>
-    <header>
+    <header class="barra">
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <img src="imagen/menu-regular-24.png" alt="Logo Menu">
+                <img src="imagen/interface-button_icon.png" alt="Logo Menu">
             </label>
             <a href="index.html" class="enlace"><img src="imagen/lenna2.png" title="Inicio" alt="Logo Lenna"
                     class="logo"></a>
@@ -37,107 +39,115 @@
 
     <main class="populares">
         <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s">Ofertas</h1>
-        <div class="grid">
-            <div>
-                <span>
-                    <a href="#">
-                        <img src="imagen/Conjunto/camperashortcort.webp" class="imagenCatalogo">
-                    </a>
-                </span>
-                <h2>Campera y Short Corto</h2>
-                <h4>$1.XXX,XX</h4>
-                <h5>$1.XXX,XX</h5>
-                <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+        <div class="container">
+            <div class="item">
+                    <img src="imagen/Conjunto/camperashortcort.webp" class="item-imag">
+                <div class="item-text">
+                    <h3>Campera y Short Corto</h3>
+                    <h4>$1.XXX,XX</h4>
+                    <h5>$1.XXX,XX</h5>
+                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                </div>
             </div>
-            <div>
-                <span>
-                    <a href="#">
-                        <img src="imagen/Abrigo/buzo.webp" class="imagenCatalogo">
-                    </a>
-                </span>
-                <h2>Buzo</h2>
-                <h4>$1.XXX,XX</h4>
-                <h5>$1.XXX,XX</h5>
-                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+            <div class="item">
+                    <img src="imagen/Abrigo/buzo.webp" class="item-imag">
+                <div class="item-text">
+                <h3>Buzo Poliester</h3>
+                    <h4>$1.XXX,XX</h4>
+                    <h5>$1.XXX,XX</h5>
+                    <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                </div>
             </div>
-            <div>
-                <span>
-                    <a href="#">
-                        <img src="imagen/ropa deportiva/shortsrunning.webp" class="imagenCatalogo">
-                    </a>
-                </span>
+            <div class="item">
+                    <img src="imagen/ropa deportiva/shortsrunning.webp" class="item-imag">
+                    <div class="item-text">
                 <h2>Shorts Running</h2>
                 <h4>$1.XXX,XX</h4>
                 <h5>$1.XXX,XX</h5>
                 <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
             </div>
-            <div>
-                <span>
-                    <a href="#">
-                        <img src="imagen/Conjunto/remerashortgym.webp" class="imagenCatalogo">
-                    </a>
-                </span>
-                <h2>Remera y Short Corto Gym</h2>
+        </div>
+            <div class="item">
+                        <img src="imagen/Conjunto/remerashortgym.webp" class="item-imag">
+                        <div class="item-text">
+                <h2>Remera y Short</h2>
                 <h4>$1.XXX,XX</h4>
                 <h5>$1.XXX,XX</h5>
                 <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
             </div>
-            <div>
-                <span>
-                    <a href="#">
-                        <img src="imagen/Conjunto/camperashortcort.webp" class="imagenCatalogo">
-                    </a>
-                </span>
-                <h2>Campera y Short Corto</h2>
-                <h4>$1.XXX,XX</h4>
-                <h5>$1.XXX,XX</h5>
-                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
             </div>
-            <div>
-                <span>
-                    <a href="#">
-                        <img src="imagen/Abrigo/buzo.webp" class="imagenCatalogo">
-                    </a>
-                </span>
-                <h2>Buzo</h2>
-                <h4>$1.XXX,XX</h4>
-                <h5>$1.XXX,XX</h5>
+            <div class="item">
+                        <img src="imagen/Conjunto/camperashortcort.webp" class="item-imag">
+                        <div class="item-text">
+                <h2>Campera y Short</h2>
+                <p>$1.XXX,XX</p>
+                <p>$1.XXX,XX</p>
                 <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+
             </div>
-            <div>
-                <span>
-                    <a href="#">
-                        <img src="imagen/ropa deportiva/shortsrunning.webp" class="imagenCatalogo">
-                    </a>
-                </span>
+            </div>
+            <div class="item">
+                        <img src="imagen/Abrigo/buzo.webp" class="item-imag">
+                        <div class="item-text">
+                <h2>Buzo Poliester</h2>
+                <p>$1.XXX,XX</p>
+                <p>$1.XXX,XX</p>
+                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+
+            </div>
+            </div>
+            <div class="item">
+                        <img src="imagen/ropa deportiva/shortsrunning.webp" class="item-imag">
+                        <div class="item-text">
                 <h2>Shorts Running</h2>
-                <h4>$1.XXX,XX</h4>
-                <h5>$1.XXX,XX</h5>
+                <p>$1.XXX,XX</p>
+                <p>$1.XXX,XX</p>
                 <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
             </div>
-            <div>
-                <span>
-                    <a href="#">
-                        <img src="imagen/Conjunto/remerashortgym.webp" class="imagenCatalogo">
-                    </a>
-                </span>
-                <h2>Remera y Short Corto Gym</h2>
-                <h4>$1.XXX,XX</h4>
-                <h5>$1.XXX,XX</h5>
+            </div>
+            <div class="item">
+                        <img src="imagen/Conjunto/remerashortgym.webp" class="item-imag">
+                        <div class="item-text">
+                <h2>Remera y Short</h2>
+                <p>$1.XXX,XX</p>
+                <p>$1.XXX,XX</p>
                 <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+            </div>
             </div>
         </div>
     </Main>
 
-    <footer class="footer">
-        <div>
-            <a href="#"><img src="imagen/contacto.png" title="Contacto" class="footer__logos"></a>
-            <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp2.png" class="footer__logos"></a>
-            <a href="https://instagram.com" target="blank"><img src="imagen/Instagram.png" class="footer__logos"></a>
-            <a href="https://facebook.com" target="blank"><img src="imagen/Facebook.png" class="footer__logos"></a>
+    <footer class="pie-pagina">
+        <div class="grupo">
+            <div class="box1">
+                <figure>
+                    <a href="#"><img src="imagen/lenna1.jpg" alt="Logo LENNA"></a>
+                </figure>
+            </div>
+            <div class="box2">
+                <h2>SOBRE NOSOTROS</h2>
+                <P>Nuestro compromiso es ofrecer una gran variedad de prendas con una excelente relación
+                    diseño-precio-calidad.</P>
+                <p>También podes seguirnos en redes sociales para que podamos estar conectados y nos sigamos conociendo.
+                </p>
+            </div>
+            <div class="box2">
+                <h2>SEGUINOS</h2>
+                <div class="red-sociales">
+                    <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
+                    <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
+                    <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+                </div>
+            </div>
         </div>
-        <p class="footer--copy"> &copy; 2021 LENNA</p>
+        <div class="copy">
+            <p>&copy; 2021 <b>LENNA</b> - todos los derechos reservados</p>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous">
+    </script>     
 </body>
 
 </html>
