--- a/ropa-deportiva-M.html
+++ b/ropa-deportiva-M.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Descubre nuestro catálogo de Ropa de invierno y media estacion">
-  <meta name="keywords" content="Abrigo, Parka, Buzos, Campera, Moda">
+  <meta name="description" content="Accedé a lo mejor de la Ropa Deportiva LENNA">
+  <meta name="keywords" content="Indumentaria Running, Training, Fútbol, Fitness, Ropa, Moda">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-  <title>Abrigo</title>
+  <title>Ropa Deportiva</title>
   <link rel="icon" href="imagen/lenna1.ico" />
   <link rel="stylesheet" href="css/estilos.css" />
 </head>
@@ -36,33 +36,53 @@
     </nav>
   </header>
 
+  <div>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="index.html">INICIO</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="ropa-deportiva.html">HOMBRE</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">MUJER</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">NIÑO</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled">ROPA DEPORTIVA MUJER</a>
+      </li>
+    </ul>
+  </div>
+
   <main class="articulo">
     <div class="conte">
       <div class="row">
         <div class="cata">
-          <img src="imagen/Abrigo/buzo.webp" class="img-general">
-          <h2>Buzo</h2>
+          <img src="imagen/ropa deportiva/MUJER/PrimaveraVerano.webp" class="img-general">
+          <h2>Remera Ajustada</h2>
           <p>Buzo de hombre Grayson</p>
           <p>$1.XXX,XX</p>
           <a href="#" class="btn">Comprar</a>
         </div>
         <div class="cata">
-          <img src="imagen/Abrigo/campera.webp" class="img-general">
-          <h2>Campera</h2>
+          <img src="imagen/ropa deportiva/MUJER/sudaderamu.webp" class="img-general">
+          <h2>Remera de Diseño</h2>
           <p>Campera de micro polar</p>
           <p>$1.XXX,XX </p>
           <a href="#" class="btn">Comprar</a>
         </div>
         <div class="cata">
-          <img src="imagen/Abrigo/camperon.jpg" class="img-general">
-          <h2>Camperon</h2>
+          <img src="imagen/ropa deportiva/MUJER/sujetador.webp" class="img-general">
+          <h2>Short Running</h2>
           <p>Campera Nix con Polar</p>
           <p>$1.XXX,XX </p>
           <a href="#" class="btn">Comprar</a>
         </div>
         <div class="cata">
-          <img src="imagen/Abrigo/parka.jpg" class="img-general">
-          <h2>Parka</h2>
+          <img src="imagen/ropa deportiva/MUJER/sujetadordeportivo.jpg" class="img-general">
+          <h2>Pantalon Jogging</h2>
           <p>Lorem ipsum dolor sit.</p>
           <p>$1.XXX,XX</p>
           <a href="#" class="btn">Comprar</a>
@@ -93,35 +113,35 @@
 
   <footer class="pie-pagina">
     <div class="grupo">
-      <div class="box1">
-        <figure>
-          <a href="#"><img src="imagen/lenna1.jpg" alt="Logo LENNA"></a>
-        </figure>
-      </div>
-      <div class="box2">
-        <h2>SOBRE NOSOTROS</h2>
-        <P>Nuestro compromiso es ofrecer una gran variedad de prendas con una excelente relación
-          diseño-precio-calidad.</P>
-        <p>También podes seguirnos en redes sociales para que podamos estar conectados y nos sigamos conociendo.
-        </p>
-      </div>
-      <div class="box2">
-        <h2>SEGUINOS</h2>
-        <div class="red-sociales">
-          <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
-          <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
-          <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+        <div class="box1">
+            <figure>
+                <a href="#"><img src="imagen/lenna1.jpg" alt="Logo LENNA"></a>
+            </figure>
         </div>
-      </div>
+        <div class="box2">
+            <h2>SOBRE NOSOTROS</h2>
+            <P>Nuestro compromiso es ofrecer una gran variedad de prendas con una excelente relación
+                diseño-precio-calidad.</P>
+            <p>También podes seguirnos en redes sociales para que podamos estar conectados y nos sigamos conociendo.
+            </p>
+        </div>
+        <div class="box2">
+            <h2>SEGUINOS</h2>
+            <div class="red-sociales">
+                <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
+                <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
+                <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+            </div>
+        </div>
     </div>
     <div class="copy">
-      <p>&copy; 2021 <b>LENNA</b> - todos los derechos reservados</p>
+        <p>&copy; 2021 <b>LENNA</b> - todos los derechos reservados</p>
     </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous">
-  </script>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
 </body>
 
 </html>
