modificaciones nueva_web

--- a/conjuntos.html
+++ b/conjuntos.html
@@ -56,14 +56,14 @@
         <div class="cata">
           <img src="imagen/Conjunto/shortcortoremera.webp" class="img-general">
           <h2>Remera y Short</h2>
-          <p>sdghgjjjjjjjjjjj</p>
+          <p>Remera Set de poliéster</p>
           <p>$1.XXX,XX </p>
           <a href="#" class="btn">Comprar</a>
         </div>
         <div class="cata">
           <img src="imagen/Conjunto/remerashortgym.webp" class="img-general">
           <h2>Remera y Short</h2>
-          <p>fghjkkkkkkkkkk</p>
+          <p>Remera Set de poliéster</p>
           <p>$1.XXX,XX</p>
           <a href="#" class="btn">Comprar</a>
         </div>
