Actualizacion pagina principal Dic

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </section>
 
         <section class="nosotros">
-            <h2>NUESTROS SERVICIOS</h2>
+            <h1 class="animate__animated animate__bounce animate__pulse animate__delay-3s animate__slower 2s animate__infinite">NUESTROS SERVICIOS</h1>
             <div class="iconos">
                 <div>
                     <a href="#"><img src="imagen/free-icon.jpg" title="Envios" alt="envios"></a>
@@ -119,8 +119,8 @@
             </div>
         </section>
 
-        <section class="container">
-            <div class="container__info">
+        <section class="contain">
+            <div class="contain__info">
                 <div class="info--link">
                     <img src="imagen/Conjunto/set.jpg" class="img-general" />
                     <h3>Populares</h3>
@@ -132,7 +132,7 @@
                     </span>
                 </div>
             </div>
-            <div class="container__info">
+            <div class="contain__info">
                 <div class="info--link">
                     <img src="imagen/Conjunto/remerashortgym.webp" class="img-general" />
                     <h3>Conjunto Training </h3>
@@ -144,9 +144,9 @@
                     </span>
                 </div>
             </div>
-            <div class="container__info">
+            <div class="contain__info">
                 <div class="info--link">
-                    <img src="imagen/ropa deportiva/MUJER/sujetadordeportivo.jpg" class="img-general" />
+                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general" />
                     <h3>Ofertas</h3>
                     <p>Mira todas nuestras ofertas y descuentos.</p>
                     <span class="span">
