--- a/ofertas.html
+++ b/ofertas.html
@@ -37,85 +37,79 @@
         </nav>
     </header>
 
-    <main class="populares">
-        <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s">Ofertas</h1>
+    <main>
+        <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s">OFERTAS</h1>
         <div class="container">
             <div class="item">
-                    <img src="imagen/Conjunto/camperashortcort.webp" class="item-imag">
                 <div class="item-text">
-                    <h3>Campera y Short Corto</h3>
+                    <img src="imagen/Abrigo/buzo.webp" class="img-general">
+                    <h3>Buzo Poliester</h3>
                     <h4>$1.XXX,XX</h4>
                     <h5>$1.XXX,XX</h5>
                     <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <span class="btn">
+                        <a href="#">Comprar</a>
+                    </span>
                 </div>
             </div>
             <div class="item">
-                    <img src="imagen/Abrigo/buzo.webp" class="item-imag">
                 <div class="item-text">
-                <h3>Buzo Poliester</h3>
+                    <img src="imagen/Abrigo/camperon.jpg" class="img-general">
+                    <h3>Campera Sport</h3>
                     <h4>$1.XXX,XX</h4>
                     <h5>$1.XXX,XX</h5>
-                    <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <span class="btn">
+                        <a href="#">Comprar</a>
+                    </span>
                 </div>
             </div>
             <div class="item">
-                    <img src="imagen/ropa deportiva/shortsrunning.webp" class="item-imag">
-                    <div class="item-text">
-                <h2>Shorts Running</h2>
-                <h4>$1.XXX,XX</h4>
-                <h5>$1.XXX,XX</h5>
-                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-            </div>
-        </div>
-            <div class="item">
-                        <img src="imagen/Conjunto/remerashortgym.webp" class="item-imag">
-                        <div class="item-text">
-                <h2>Remera y Short</h2>
-                <h4>$1.XXX,XX</h4>
-                <h5>$1.XXX,XX</h5>
-                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-            </div>
+                <div class="item-text">
+                    <img src="imagen/Conjunto/remerashortgym.webp" class="img-general">
+                    <h3>Remara Y Short</h3>
+                    <h4>$1.XXX,XX</h4>
+                    <h5>$1.XXX,XX</h5>
+                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <span class="btn">
+                        <a href="#">Comprar</a>
+                    </span>
+                </div>
             </div>
             <div class="item">
-                        <img src="imagen/Conjunto/camperashortcort.webp" class="item-imag">
-                        <div class="item-text">
-                <h2>Campera y Short</h2>
-                <p>$1.XXX,XX</p>
-                <p>$1.XXX,XX</p>
-                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-
-            </div>
-            </div>
-            <div class="item">
-                        <img src="imagen/Abrigo/buzo.webp" class="item-imag">
-                        <div class="item-text">
-                <h2>Buzo Poliester</h2>
-                <p>$1.XXX,XX</p>
-                <p>$1.XXX,XX</p>
-                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-
-            </div>
-            </div>
-            <div class="item">
-                        <img src="imagen/ropa deportiva/shortsrunning.webp" class="item-imag">
-                        <div class="item-text">
-                <h2>Shorts Running</h2>
-                <p>$1.XXX,XX</p>
-                <p>$1.XXX,XX</p>
-                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-            </div>
-            </div>
-            <div class="item">
-                        <img src="imagen/Conjunto/remerashortgym.webp" class="item-imag">
-                        <div class="item-text">
-                <h2>Remera y Short</h2>
-                <p>$1.XXX,XX</p>
-                <p>$1.XXX,XX</p>
-                <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-            </div>
-            </div>
+                <div class="item-text">
+                    <img src="imagen/ropa deportiva/MUJER/sudaderamu.webp" class="img-general">
+                    <h3>Sudadera Mujer</h3>
+                    <h4>$1.XXX,XX</h4>
+                    <h5>$1.XXX,XX</h5>
+                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <span class="btn">
+                        <a href="#">Comprar</a>
+                    </span>
+                </div>
+            </div>     
         </div>
     </Main>
+
+    <section class="pag">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </section>
 
     <footer class="pie-pagina">
         <div class="grupo">
@@ -145,9 +139,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous">
-    </script>     
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
