--- a/ropa-deportiva.html
+++ b/ropa-deportiva.html
@@ -37,56 +37,55 @@
         </nav>
     </header>
 
-    <div>
-        <ul class="nav nav-tabs-center">
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">INICIO</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="ropa-deportiva.html">HOMBRE</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="Ropa-deportiva-M.html">MUJER</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">NIÑO</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled">ROPA DEPORTIVA HOMBRE</a>
-            </li>
-        </ul>
-    </div>
-
-    <main class="articulo">
-        <div class="conte">
-            <div class="row">
-                <div class="cata">
-                    <img src="imagen/ropa deportiva/remeraalcuerpo.webp" class="img-general">
-                    <h2>Remera Ajustada</h2>
-                    <p>Buzo de hombre Grayson</p>
-                    <p>$1.XXX,XX</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <div class="cata">
-                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general">
-                    <h2>Remera de Diseño</h2>
-                    <p>Campera de micro polar</p>
-                    <p>$1.XXX,XX </p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <div class="cata">
-                    <img src="imagen/ropa deportiva/shortsrunning.webp" class="img-general">
-                    <h2>Short Running</h2>
-                    <p>Campera Nix con Polar</p>
-                    <p>$1.XXX,XX </p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <div class="cata">
+    <main>
+        <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s animate_center">ROPA DEPORTIVA</h1>
+        <div class="container">
+            <div class="item">
+                <div class="item-text">
                     <img src="imagen/ropa deportiva/PantalonJogging.webp" class="img-general">
-                    <h2>Pantalon Jogging</h2>
-                    <p>Lorem ipsum dolor sit.</p>
-                    <p>$1.XXX,XX</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <h3>Pantalon Jogging</h3>
+                    <h4> Negro Deportivo Hombre</h4>
+                    <p>$1.xxx,xx</p>
+                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <span class="btn">
+                        <a href="#">Comprar</a>
+                    </span>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-text">
+                    <img src="imagen/ropa deportiva/remeraalcuerpo.webp" class="img-general">
+                    <h3>Remara Entallada</h3>
+                    <h4>Remera Fit Running</h4>
+                    <p>$1.xxx,xx</p>
+                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <span class="btn">
+                        <a href="#">Comprar</a>
+                    </span>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-text">
+                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general">
+                    <h3>Remera Camiseta</h3>
+                    <h4>Para toda disciplina Deportiva</h4>
+                    <p>$1.xxx,xx</p>
+                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <span class="btn">
+                        <a href="#">Comprar</a>
+                    </span>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-text">
+                    <img src="imagen/ropa deportiva/shortsrunning.webp" class="img-general">
+                    <h3>Short Hombre Running</h3>
+                    <h4>Excelente calce y confección</h4>
+                    <p>$1.xxx,xx</p>
+                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                    <span class="btn">
+                        <a href="#">Comprar</a>
+                    </span>
                 </div>
             </div>
         </div>
