--- a/abrigo.html
+++ b/abrigo.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Descubre nuestro catálogo de Ropa de invierno y media estacion">
   <meta name="keywords" content="Abrigo, Parka, Buzos, Campera, Moda">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -36,36 +36,55 @@
     </nav>
   </header>
 
-  <main class="articulo">
-    <div class="conte">
-      <div class="row">
-        <div class="cata">
+  <main>
+    <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s">ABRIGO</h1>
+    <div class="container">
+      <div class="item">
+        <div class="item-text">
           <img src="imagen/Abrigo/buzo.webp" class="img-general">
-          <h2>Buzo</h2>
-          <p>Buzo de hombre Grayson</p>
-          <p>$1.XXX,XX</p>
-          <a href="#" class="btn">Comprar</a>
+          <h3>Buzo</h3>
+          <h4>Buzo de hombre Grayson</h4>
+          <p>$1.xxx,xx</p>
+          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+          <span class="btn">
+            <a href="#">Comprar</a>
+          </span>
         </div>
-        <div class="cata">
+      </div>
+      <div class="item">
+        <div class="item-text">
           <img src="imagen/Abrigo/campera.webp" class="img-general">
-          <h2>Campera</h2>
-          <p>Campera de micro polar</p>
-          <p>$1.XXX,XX </p>
-          <a href="#" class="btn">Comprar</a>
+          <h3>Campera Sport</h3>
+          <h4>Campera de micro polar</h4>
+          <p>$1.xxx,xx</p>
+          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+          <span class="btn">
+            <a href="#">Comprar</a>
+          </span>
         </div>
-        <div class="cata">
+      </div>
+      <div class="item">
+        <div class="item-text">
           <img src="imagen/Abrigo/camperon.jpg" class="img-general">
-          <h2>Camperon</h2>
-          <p>Campera Nix con Polar</p>
-          <p>$1.XXX,XX </p>
-          <a href="#" class="btn">Comprar</a>
+          <h3>Remara Y Short</h3>
+          <h4>Campera Nix con Polar</h4>
+          <p>$1.xxx,xx</p>
+          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+          <span class="btn">
+            <a href="#">Comprar</a>
+          </span>
         </div>
-        <div class="cata">
-          <img src="imagen/Abrigo/parka.jpg" class="img-general">
-          <h2>Parka</h2>
-          <p>Lorem ipsum dolor sit.</p>
-          <p>$1.XXX,XX</p>
-          <a href="#" class="btn">Comprar</a>
+      </div>
+      <div class="item">
+        <div class="item-text">
+          <img src="imagen/Abrigo/parkacap.webp" class="img-general">
+          <h3>Abrigo Parka</h3>
+          <h4>Con capucha, 100% Poliéster</h4>
+          <p>$1.xxx,xx</p>
+          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+          <span class="btn">
+            <a href="#">Comprar</a>
+          </span>
         </div>
       </div>
     </div>
@@ -119,9 +138,8 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous">
-  </script>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
