--- a/conjuntos.html
+++ b/conjuntos.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
   <title>Conjuntos</title>
   <link rel="icon" href="imagen/lenna1.ico" />
@@ -36,36 +36,55 @@
     </nav>
   </header>
 
-  <main class="articulo">
-    <div class="conte">
-      <div class="row">
-        <div class="cata">
+  <main>
+    <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s">CONJUNTOS</h1>
+    <div class="container">
+      <div class="item">
+        <div class="item-text">
           <img src="imagen/Conjunto/buzoyjogging.webp" class="img-general">
-          <h2>Buzo y Jogging</h2>
-          <p>Buzo de hombre Grayson</p>
-          <p>$1.XXX,XX</p>
-          <a href="#" class="btn">Comprar</a>
+          <h3>Buzo y Jogging</h3>
+          <h4>Conjunto Negro Deportivo Hombre</h4>
+          <p>$1.xxx,xx</p>
+          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+          <span class="btn">
+            <a href="#">Comprar</a>
+          </span>
         </div>
-        <div class="cata">
+      </div>
+      <div class="item">
+        <div class="item-text">
           <img src="imagen/Conjunto/camperashortcort.webp" class="img-general">
-          <h2>Campera y Short</h2>
-          <p>Campera de micro polar</p>
-          <p>$1.XXX,XX </p>
-          <a href="#" class="btn">Comprar</a>
+          <h3>Combo Run!</h3>
+          <h4>Campera de Lluvia + Short Deportivo</h4>
+          <p>$1.xxx,xx</p>
+          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+          <span class="btn">
+            <a href="#">Comprar</a>
+          </span>
         </div>
-        <div class="cata">
+      </div>
+      <div class="item">
+        <div class="item-text">
           <img src="imagen/Conjunto/shortcortoremera.webp" class="img-general">
-          <h2>Remera y Short</h2>
-          <p>Remera Set de poliéster</p>
-          <p>$1.XXX,XX </p>
-          <a href="#" class="btn">Comprar</a>
+          <h3>Remera y Short</h3>
+          <h4>Para toda disciplina Deportiva</h4>
+          <p>$1.xxx,xx</p>
+          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+          <span class="btn">
+            <a href="#">Comprar</a>
+          </span>
         </div>
-        <div class="cata">
+      </div>
+      <div class="item">
+        <div class="item-text">
           <img src="imagen/Conjunto/remerashortgym.webp" class="img-general">
-          <h2>Remera y Short</h2>
-          <p>Remera Set de poliéster</p>
-          <p>$1.XXX,XX</p>
-          <a href="#" class="btn">Comprar</a>
+          <h3>Remera y Short</h3>
+          <h4>Algodon Premium Calse Perfecto</h4>
+          <p>$1.xxx,xx</p>
+          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+          <span class="btn">
+            <a href="#">Comprar</a>
+          </span>
         </div>
       </div>
     </div>
@@ -118,9 +137,8 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous">
-  </script>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
