se actulizo la pagina,Diciembre

--- a/conjuntos.html
+++ b/conjuntos.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Descubrí los conjuntos tendecia de LENNA">
-  <meta name="keywords" content="Moda, Ropa, Buzo-Jogging, Campera-Short, Remera-Short">
+  <meta name="keywords" content="Moda, Ropa, Buzo, Jogging, Campera, Short, Remera, deporte, conjuntos">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="item">
         <div class="item-text">
-          <img src="imagen/Conjunto/buzoyjogging.webp" class="img-general">
+          <img src="imagen/Conjunto/buzoyjogging.webp" class="img-general" alt="Conjunto Buzo y Jogging">
           <h3>Buzo y Jogging</h3>
           <h4>Conjunto Negro Deportivo Hombre</h4>
           <p>$1.xxx,xx</p>
@@ -53,7 +53,7 @@
       </div>
       <div class="item">
         <div class="item-text">
-          <img src="imagen/Conjunto/camperashortcort.webp" class="img-general">
+          <img src="imagen/Conjunto/camperashortcort.webp" class="img-general" alt="Conjunto Campera y Short corto">
           <h3>Combo Run!</h3>
           <h4>Campera de Lluvia + Short Deportivo</h4>
           <p>$1.xxx,xx</p>
@@ -65,7 +65,7 @@
       </div>
       <div class="item">
         <div class="item-text">
-          <img src="imagen/Conjunto/shortcortoremera.webp" class="img-general">
+          <img src="imagen/Conjunto/shortcortoremera.webp" class="img-general" alt="Conjunto Remera y Short corto">
           <h3>Remera y Short</h3>
           <h4>Para toda disciplina Deportiva</h4>
           <p>$1.xxx,xx</p>
@@ -77,7 +77,7 @@
       </div>
       <div class="item">
         <div class="item-text">
-          <img src="imagen/Conjunto/remerashortgym.webp" class="img-general">
+          <img src="imagen/Conjunto/remerashortgym.webp" class="img-general" alt="Conjunto Remera y Short">
           <h3>Remera y Short</h3>
           <h4>Algodon Premium Calse Perfecto</h4>
           <p>$1.xxx,xx</p>
@@ -126,9 +126,9 @@
       <div class="box2">
         <h2>SEGUINOS</h2>
         <div class="red-sociales">
-          <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
-          <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
-          <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+          <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png" alt="logo whatsapp"></a>
+          <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png" alt="logo instagram"></a>
+          <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png" alt="logo facebook"></a>
         </div>
       </div>
     </div>
