--- a/ofertas.html
+++ b/ofertas.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Descubrí nuestras ultimas ofertas LENNA">
-    <meta name="keywords" content="Ofertas del 15%,25% en buzos,Camperas,Consjuntos">
+    <meta name="keywords" content="Ofertas, descuentos, sale, moda, ropa, deportiva, Camperas, Consjuntos">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="item">
                 <div class="item-text">
-                    <img src="imagen/Abrigo/buzo.webp" class="img-general">
+                    <img src="imagen/Abrigo/buzo.webp" class="img-general" alt="Ofertas Buzo">
                     <h3>Buzo Poliester</h3>
                     <h4>$1.XXX,XX</h4>
                     <h5>$1.XXX,XX</h5>
@@ -54,7 +54,7 @@
             </div>
             <div class="item">
                 <div class="item-text">
-                    <img src="imagen/Abrigo/camperon.jpg" class="img-general">
+                    <img src="imagen/Abrigo/camperon.jpg" class="img-general" alt="Ofertas Camperon">
                     <h3>Campera Sport</h3>
                     <h4>$1.XXX,XX</h4>
                     <h5>$1.XXX,XX</h5>
@@ -66,7 +66,7 @@
             </div>
             <div class="item">
                 <div class="item-text">
-                    <img src="imagen/Conjunto/remerashortgym.webp" class="img-general">
+                    <img src="imagen/Conjunto/remerashortgym.webp" class="img-general" alt="Ofertas Remera y Short">
                     <h3>Remara Y Short</h3>
                     <h4>$1.XXX,XX</h4>
                     <h5>$1.XXX,XX</h5>
@@ -78,7 +78,7 @@
             </div>
             <div class="item">
                 <div class="item-text">
-                    <img src="imagen/ropa deportiva/MUJER/sudaderamu.webp" class="img-general">
+                    <img src="imagen/ropa deportiva/sudaderamu.webp" class="img-general" alt="Ofertas Sudadera">
                     <h3>Sudadera Mujer</h3>
                     <h4>$1.XXX,XX</h4>
                     <h5>$1.XXX,XX</h5>
@@ -87,29 +87,29 @@
                         <a href="#">Comprar</a>
                     </span>
                 </div>
-            </div>     
+            </div>
         </div>
     </Main>
 
     <section class="pag">
         <nav aria-label="Page navigation example">
-          <ul class="pagination">
-            <li class="page-item">
-              <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
-            </li>
-          </ul>
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
         </nav>
-      </section>
+    </section>
 
     <footer class="pie-pagina">
         <div class="grupo">
@@ -128,9 +128,9 @@
             <div class="box2">
                 <h2>SEGUINOS</h2>
                 <div class="red-sociales">
-                    <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
-                    <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
-                    <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+                    <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png" alt="logo whatsapp"></a>
+                    <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png" alt="logo instagram"></a>
+                    <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png" alt="logo facebook"></a>
                 </div>
             </div>
         </div>
