--- a/abrigo.html
+++ b/abrigo.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Descubre nuestro catálogo de Ropa de invierno y media estacion">
-  <meta name="keywords" content="Abrigo, Parka, Buzos, Campera, Moda">
+  <meta name="keywords" content="Abrigo, Parka, Buzos, Campera, Moda, invierno,deporte">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="item">
         <div class="item-text">
-          <img src="imagen/Abrigo/buzo.webp" class="img-general">
+          <img src="imagen/Abrigo/buzo.webp" class="img-general" alt="Abrigo Buzo">
           <h3>Buzo</h3>
           <h4>Buzo de hombre Grayson</h4>
           <p>$1.xxx,xx</p>
@@ -53,7 +53,7 @@
       </div>
       <div class="item">
         <div class="item-text">
-          <img src="imagen/Abrigo/campera.webp" class="img-general">
+          <img src="imagen/Abrigo/campera.webp" class="img-general" alt="Abrigo Campera">
           <h3>Campera Sport</h3>
           <h4>Campera de micro polar</h4>
           <p>$1.xxx,xx</p>
@@ -65,7 +65,7 @@
       </div>
       <div class="item">
         <div class="item-text">
-          <img src="imagen/Abrigo/camperon.jpg" class="img-general">
+          <img src="imagen/Abrigo/camperon.jpg" class="img-general" alt="Abrigo Camperon">
           <h3>Remara Y Short</h3>
           <h4>Campera Nix con Polar</h4>
           <p>$1.xxx,xx</p>
@@ -77,7 +77,7 @@
       </div>
       <div class="item">
         <div class="item-text">
-          <img src="imagen/Abrigo/parkacap.webp" class="img-general">
+          <img src="imagen/Abrigo/parkacap.webp" class="img-general" alt="Abrigo Parka">
           <h3>Abrigo Parka</h3>
           <h4>Con capucha, 100% Poliéster</h4>
           <p>$1.xxx,xx</p>
@@ -127,9 +127,9 @@
       <div class="box2">
         <h2>SEGUINOS</h2>
         <div class="red-sociales">
-          <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
-          <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
-          <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+          <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png" alt="logo whatsapp"></a>
+          <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png" alt="logo instagram"></a>
+          <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png" alt="logo facebook"></a>
         </div>
       </div>
     </div>
