--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contactanos. ¿Necesitás hablar con nosotros? ¡Estamos para ayudarte!">
-    <meta name="keywords" content="Email, Redes Sociales, Consulta, Preguntas">
+    <meta name="keywords" content="Email, Redes Sociales, Consulta, Preguntas, contacto">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -64,9 +64,9 @@
           <div class="box2">
               <h2>SEGUINOS</h2>
               <div class="red-sociales">
-                  <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
-                  <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
-                  <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+                <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png" alt="logo whatsapp"></a>
+                <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png" alt="logo instagram"></a>
+                <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png" alt="logo facebook"></a>
               </div>
           </div>
       </div>
