--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tienda online de indumentaria deportiva y accesorios.">
-    <meta name="keywords" content="Indumentaria Deportiva, Moda, Ropa, Muejer, Niños, Hombres">
+    <meta name="keywords" content="Indumentaria Deportiva, Moda, Ropa, conjuntos, buzo, short, abrigo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -122,7 +122,7 @@
         <section class="contain">
             <div class="contain__info">
                 <div class="info--link">
-                    <img src="imagen/Conjunto/set.jpg" class="img-general" />
+                    <img src="imagen/Conjunto/set.jpg" class="img-general" alt="Conjunto Deportivo"/>
                     <h3>Populares</h3>
                     <p>Lo mas elegido de nuestros clientes LENNA.</p>
                     <span class="span">
@@ -134,7 +134,7 @@
             </div>
             <div class="contain__info">
                 <div class="info--link">
-                    <img src="imagen/Conjunto/remerashortgym.webp" class="img-general" />
+                    <img src="imagen/Conjunto/remerashortgym.webp" class="img-general" alt="Remera y Short"/>
                     <h3>Conjunto Training </h3>
                     <p> <strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
                     <span class="span">
@@ -146,7 +146,7 @@
             </div>
             <div class="contain__info">
                 <div class="info--link">
-                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general" />
+                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general" alt="Remera"/>
                     <h3>Ofertas</h3>
                     <p>Mira todas nuestras ofertas y descuentos.</p>
                     <span class="span">
