--- a/ropa-deportiva.html
+++ b/ropa-deportiva.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Accedé a lo mejor de la Ropa Deportiva LENNA">
-    <meta name="keywords" content="Indumentaria Running, Training, Fútbol, Fitness, Ropa, Moda">
+    <meta name="description" content="Descubrí lo mejor de Ropa Deportiva LENNA">
+    <meta name="keywords" content="Indumentaria Running, Training, Fitness, Ropa, Moda, deporte, campera, short">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="item">
                 <div class="item-text">
-                    <img src="imagen/ropa deportiva/PantalonJogging.webp" class="img-general">
+                    <img src="imagen/ropa deportiva/PantalonJogging.webp" class="img-general" alt="Pantalon Jogging">
                     <h3>Pantalon Jogging</h3>
                     <h4> Negro Deportivo Hombre</h4>
                     <p>$1.xxx,xx</p>
@@ -54,7 +54,7 @@
             </div>
             <div class="item">
                 <div class="item-text">
-                    <img src="imagen/ropa deportiva/remeraalcuerpo.webp" class="img-general">
+                    <img src="imagen/ropa deportiva/remeraalcuerpo.webp" class="img-general" alt="Remera Deportiva">
                     <h3>Remara Entallada</h3>
                     <h4>Remera Fit Running</h4>
                     <p>$1.xxx,xx</p>
@@ -66,7 +66,7 @@
             </div>
             <div class="item">
                 <div class="item-text">
-                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general">
+                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general" alt="Remera Deportiva">
                     <h3>Remera Camiseta</h3>
                     <h4>Para toda disciplina Deportiva</h4>
                     <p>$1.xxx,xx</p>
@@ -78,7 +78,7 @@
             </div>
             <div class="item">
                 <div class="item-text">
-                    <img src="imagen/ropa deportiva/shortsrunning.webp" class="img-general">
+                    <img src="imagen/ropa deportiva/shortsrunning.webp" class="img-general" alt="Short">
                     <h3>Short Hombre Running</h3>
                     <h4>Excelente calce y confección</h4>
                     <p>$1.xxx,xx</p>
@@ -128,9 +128,9 @@
             <div class="box2">
                 <h2>SEGUINOS</h2>
                 <div class="red-sociales">
-                    <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"></a>
-                    <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"></a>
-                    <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"></a>
+                    <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png" alt="logo whatsapp"></a>
+                    <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png" alt="logo instagram"></a>
+                    <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png" alt="logo facebook"></a>
                 </div>
             </div>
         </div>
