correcion pagina contacto

--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,8 @@
 
     <div class="contacto">
       <div class="cont-1">
-        <div class="contl"></div>
+        <div class="contl">
+        </div>
         <div class="contr">
           <h2>Contacto</h2>
             <input type="text" class="from" placeholder="Nombre">
