Correcion nueva_web

--- a/ropa-deportiva.html
+++ b/ropa-deportiva.html
@@ -91,7 +91,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="pag">
+                <div>
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
                             <li class="page-item">
