--- a/abrigo.html
+++ b/abrigo.html
@@ -88,8 +88,8 @@
             </span>
           </div>
         </div>
-        
-        <div class="pag">
+
+        <div>
           <nav aria-label="Page navigation example">
             <ul class="pagination">
               <li class="page-item">
