--- a/conjuntos.html
+++ b/conjuntos.html
@@ -88,7 +88,7 @@
             </span>
           </div>
         </div>
-        <div class="pag">
+        <div>
           <nav aria-label="Page navigation example">
             <ul class="pagination">
               <li class="page-item">
